--- a/provisioning/roles/common/templates/restore.sh.j2
+++ b/provisioning/roles/common/templates/restore.sh.j2
@@ -2,8 +2,6 @@
 set -e
 source {{ scripts_dir }}/functions.sh
 
-FPREFIX=$(get_backup_prefix)
-
 ###############################################################################
-# backup /etc/ssh
-backup_tar {{ backup_dir_common }} ${FPREFIX} {{ backup_filename_ssh }} /etc/ssh
+# restore /etc/ssh
+restore_tar {{ backup_dir_common }} {{ backup_filename_ssh }}
