--- a/provisioning/roles/jenkins/templates/jenkins.j2
+++ b/provisioning/roles/jenkins/templates/jenkins.j2
@@ -21,7 +21,7 @@ JENKINS_GROUP=$NAME
 JENKINS_WAR=/usr/share/$NAME/$NAME.war
 
 # jenkins home location
-JENKINS_HOME=/var/lib/$NAME
+JENKINS_HOME={{ jenkins_home_dir }}
 
 # set this to false if you don't want Hudson to run by itself
 # in this set up, you are expected to provide a servlet container
